fix align

--- a/src/App.css
+++ b/src/App.css
@@ -249,7 +249,7 @@ li {
 .entryStory {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   margin: 1rem;
   background-color: #fff;
